Update buttons alignment

--- a/collector.html
+++ b/collector.html
@@ -110,7 +110,7 @@
 						</div>
 						<div class="input-field col s12">
 							<div class="row" style="margin-bottom: 0px;">
-								<div class="col s6 right-align">
+								<div class="col s6 left-align">
 									<button id="btnAuxEdu" name="btnAuxEdu" class="waves-effect btn-flat btn-small" tabindex="-1">Limpiar</button>
 								</div>
 								<div class="col s6 right-align">
@@ -194,7 +194,7 @@
 						</div>
 						<div class="input-field col s12">
 							<div class="row" style="margin-bottom: 0px;">
-								<div class="col s6 right-align">
+								<div class="col s6 left-align">
 									<button id="btnAuxCourse" name="btnAuxCourse" class="waves-effect btn-flat btn-small" tabindex="-1">Limpiar</button>
 								</div>
 								<div class="col s6 right-align">
@@ -280,7 +280,7 @@
 						</div>
 						<div class="input-field col s12">
 							<div class="row" style="margin-bottom: 0px;">
-								<div class="col s6 right-align">
+								<div class="col s6 left-align">
 									<button id="btnAuxLang" name="btnAuxLang" class="waves-effect btn-flat btn-small" tabindex="-1">Limpiar</button>
 								</div>
 								<div class="col s6 right-align">
@@ -355,7 +355,7 @@
 						</div>
 						<div class="input-field col s12">
 							<div class="row" style="margin-bottom: 0px;">
-								<div class="col s6 right-align">
+								<div class="col s6 left-align">
 									<button id="btnAuxSkill" name="btnAuxSkill" class="waves-effect btn-flat btn-small" tabindex="-1">Limpiar</button>
 								</div>
 								<div class="col s6 right-align">
@@ -420,7 +420,7 @@
 						</div>
 						<div class="input-field col s12">
 							<div class="row" style="margin-bottom: 0px;">
-								<div class="col s6 right-align">
+								<div class="col s6 left-align">
 									<button id="btnAuxSector" name="btnAuxSector" class="waves-effect btn-flat btn-small" tabindex="-1">Limpiar</button>
 								</div>
 								<div class="col s6 right-align">
@@ -517,10 +517,10 @@
 								</div>
 								<div class="input-field col s3">
 									<div class="row">
-										<div class="col s6">
+										<div class="col s6 left-align">
 											<a id="linkAuxIweTask" name="linkAuxIweTask" href="#" tabindex="-1" class="resgen-simple">Limpiar</a>
 										</div>
-										<div class="col s6">
+										<div class="col s6 right-align">
 											<a id="linkMainIweTask" name="linkMainIweTask" href="#" class="resgen-simple">Agregar</a>
 										</div>
 									</div>
@@ -560,10 +560,10 @@
 								</div>
 								<div class="input-field col s3">
 									<div class="row">
-										<div class="col s6">
+										<div class="col s6 left-align">
 											<a id="linkAuxIweTool" name="linkAuxIweTool" href="#" tabindex="-1" class="resgen-simple">Limpiar</a>
 										</div>
-										<div class="col s6">
+										<div class="col s6 right-align">
 											<a id="linkMainIweTool" name="linkMainIweTool" href="#" class="resgen-simple">Agregar</a>
 										</div>
 									</div>
