Add effect to buttons

--- a/collector.html
+++ b/collector.html
@@ -65,7 +65,7 @@
 						<div class="input-field col s12">
 							<div class="row" style="margin-bottom: 0px;">
 								<div class="col s6">
-									<button id="btnAuxBasic" name="btnAuxBasic" class="waves-effect btn-flat btn-small" tabindex="-1">Limpiar</button>
+									<button id="btnAuxBasic" name="btnAuxBasic" class="waves-effect waves-light btn-flat btn-small" tabindex="-1">Limpiar</button>
 								</div>
 							</div>
 						</div>
@@ -74,7 +74,7 @@
 
 				<div class="row">
 					<div class="col s3 push-s9 right-align">
-						<button id="btnNextBasic" data-tab="education" class="waves-effect btn-flat btn-small">Siguiente</button>
+						<button id="btnNextBasic" data-tab="education" class="waves-effect waves-light btn-flat btn-small">Siguiente</button>
 					</div>
 				</div>
 
@@ -111,10 +111,10 @@
 						<div class="input-field col s12">
 							<div class="row" style="margin-bottom: 0px;">
 								<div class="col s6 left-align">
-									<button id="btnAuxEdu" name="btnAuxEdu" class="waves-effect btn-flat btn-small" tabindex="-1">Limpiar</button>
+									<button id="btnAuxEdu" name="btnAuxEdu" class="waves-effect waves-light btn-flat btn-small" tabindex="-1">Limpiar</button>
 								</div>
 								<div class="col s6 right-align">
-									<button id="btnMainEdu" name="btnMainEdu" class="waves-effect btn-flat btn-small">Agregar</button>
+									<button id="btnMainEdu" name="btnMainEdu" class="waves-effect waves-light btn-flat btn-small">Agregar</button>
 								</div>
 							</div>
 						</div>
@@ -159,10 +159,10 @@
 
 					<div class="row">
 						<div class="col s3 left-align">
-							<button id="btnPrevEdu" data-tab="basic" class="waves-effect btn-flat btn-small">Anterior</button>
+							<button id="btnPrevEdu" data-tab="basic" class="waves-effect waves-light btn-flat btn-small">Anterior</button>
 						</div>
 						<div class="col s3 push-s6 right-align">
-							<button id="btnNextEdu" data-tab="courses" class="waves-effect btn-flat btn-small">Siguiente</button>
+							<button id="btnNextEdu" data-tab="courses" class="waves-effect waves-light btn-flat btn-small">Siguiente</button>
 						</div>
 					</div>
 				</article>
@@ -195,10 +195,10 @@
 						<div class="input-field col s12">
 							<div class="row" style="margin-bottom: 0px;">
 								<div class="col s6 left-align">
-									<button id="btnAuxCourse" name="btnAuxCourse" class="waves-effect btn-flat btn-small" tabindex="-1">Limpiar</button>
+									<button id="btnAuxCourse" name="btnAuxCourse" class="waves-effect waves-light btn-flat btn-small" tabindex="-1">Limpiar</button>
 								</div>
 								<div class="col s6 right-align">
-									<button id="btnMainCourse" name="btnMainCourse" class="waves-effect btn-flat btn-small">Agregar</button>
+									<button id="btnMainCourse" name="btnMainCourse" class="waves-effect waves-light btn-flat btn-small">Agregar</button>
 								</div>
 							</div>
 						</div>
@@ -240,10 +240,10 @@
 
 					<div class="row">
 						<div class="col s3 left-align">
-							<button id="btnPrevCourse" data-tab="education" class="waves-effect btn-flat btn-small">Anterior</button>
+							<button id="btnPrevCourse" data-tab="education" class="waves-effect waves-light btn-flat btn-small">Anterior</button>
 						</div>
 						<div class="col s3 push-s6 right-align">
-							<button id="btnNextCourse" data-tab="languages" class="waves-effect btn-flat btn-small">Siguiente</button>
+							<button id="btnNextCourse" data-tab="languages" class="waves-effect waves-light btn-flat btn-small">Siguiente</button>
 						</div>
 					</div>
 				</article>
@@ -281,10 +281,10 @@
 						<div class="input-field col s12">
 							<div class="row" style="margin-bottom: 0px;">
 								<div class="col s6 left-align">
-									<button id="btnAuxLang" name="btnAuxLang" class="waves-effect btn-flat btn-small" tabindex="-1">Limpiar</button>
+									<button id="btnAuxLang" name="btnAuxLang" class="waves-effect waves-light btn-flat btn-small" tabindex="-1">Limpiar</button>
 								</div>
 								<div class="col s6 right-align">
-									<button id="btnMainLang" name="btnMainLang" class="waves-effect btn-flat btn-small">Agregar</button>
+									<button id="btnMainLang" name="btnMainLang" class="waves-effect waves-light btn-flat btn-small">Agregar</button>
 								</div>
 							</div>
 						</div>
@@ -329,10 +329,10 @@
 
 					<div class="row">
 						<div class="col s3 left-align">
-							<button id="btnPrevLang" data-tab="courses" class="waves-effect btn-flat btn-small">Anterior</button>
+							<button id="btnPrevLang" data-tab="courses" class="waves-effect waves-light btn-flat btn-small">Anterior</button>
 						</div>
 						<div class="col s3 push-s6 right-align">
-							<button id="btnNextLang" data-tab="skills" class="waves-effect btn-flat btn-small">Siguiente</button>
+							<button id="btnNextLang" data-tab="skills" class="waves-effect waves-light btn-flat btn-small">Siguiente</button>
 						</div>
 					</div>
 				</article>	
@@ -356,10 +356,10 @@
 						<div class="input-field col s12">
 							<div class="row" style="margin-bottom: 0px;">
 								<div class="col s6 left-align">
-									<button id="btnAuxSkill" name="btnAuxSkill" class="waves-effect btn-flat btn-small" tabindex="-1">Limpiar</button>
+									<button id="btnAuxSkill" name="btnAuxSkill" class="waves-effect waves-light btn-flat btn-small" tabindex="-1">Limpiar</button>
 								</div>
 								<div class="col s6 right-align">
-									<button id="btnMainSkill" name="btnMainSkill" class="waves-effect btn-flat btn-small">Agregar</button>
+									<button id="btnMainSkill" name="btnMainSkill" class="waves-effect waves-light btn-flat btn-small">Agregar</button>
 								</div>
 							</div>
 						</div>
@@ -395,10 +395,10 @@
 
 					<div class="row">
 						<div class="col s3 left-align">
-							<button id="btnPrevSkill" data-tab="languages" class="waves-effect btn-flat btn-small">Anterior</button>
+							<button id="btnPrevSkill" data-tab="languages" class="waves-effect waves-light btn-flat btn-small">Anterior</button>
 						</div>
 						<div class="col s3 push-s6 right-align">
-							<button id="btnNextSkill" data-tab="sectors" class="waves-effect btn-flat btn-small">Siguiente</button>
+							<button id="btnNextSkill" data-tab="sectors" class="waves-effect waves-light btn-flat btn-small">Siguiente</button>
 						</div>
 					</div>
 				</article>
@@ -421,10 +421,10 @@
 						<div class="input-field col s12">
 							<div class="row" style="margin-bottom: 0px;">
 								<div class="col s6 left-align">
-									<button id="btnAuxSector" name="btnAuxSector" class="waves-effect btn-flat btn-small" tabindex="-1">Limpiar</button>
+									<button id="btnAuxSector" name="btnAuxSector" class="waves-effect waves-light btn-flat btn-small" tabindex="-1">Limpiar</button>
 								</div>
 								<div class="col s6 right-align">
-									<button id="btnMainSector" name="btnMainSector" class="waves-effect btn-flat btn-small">Agregar</button>
+									<button id="btnMainSector" name="btnMainSector" class="waves-effect waves-light btn-flat btn-small">Agregar</button>
 								</div>
 							</div>
 						</div>
@@ -460,10 +460,10 @@
 
 					<div class="row">
 						<div class="col s5 left-align">
-							<button id="btnPrevSector" data-tab="skills" class="waves-effect btn-flat btn-small">Anterior</button>
+							<button id="btnPrevSector" data-tab="skills" class="waves-effect waves-light btn-flat btn-small">Anterior</button>
 						</div>
 						<div class="col s5 push-s2 right-align">
-							<button id="btnNextSector" data-tab="int-work-exp" class="waves-effect btn-flat btn-small">Siguiente</button>
+							<button id="btnNextSector" data-tab="int-work-exp" class="waves-effect waves-light btn-flat btn-small">Siguiente</button>
 						</div>
 					</div>
 				</article>
@@ -609,10 +609,10 @@
 				<div class="row">
 					<div class="col s6 push-s6">
 						<div class="col s3 push-s6" style="text-align: right;">
-							<button id="btnAuxIwe" name="btnAuxIwe" class="waves-effect btn-flat btn-small" tabindex="-1">Limpiar</button>
+							<button id="btnAuxIwe" name="btnAuxIwe" class="waves-effect waves-light btn-flat btn-small" tabindex="-1">Limpiar</button>
 						</div>
 						<div class="col s3 push-s6" style="text-align: right;">
-							<button id="btnMainIwe" name="btnMainIwe" class="waves-effect btn-flat btn-small">Agregar</button>
+							<button id="btnMainIwe" name="btnMainIwe" class="waves-effect waves-light btn-flat btn-small">Agregar</button>
 						</div>
 					</div>
 				</div>
@@ -673,11 +673,10 @@
 
 				<div class="row">
 					<div class="col s2 left-align">
-						<button id="btnPrevIwe" data-tab="sectors" class="waves-effect btn-flat btn-small">Anterior</button>
+						<button id="btnPrevIwe" data-tab="sectors" class="waves-effect waves-light btn-flat btn-small">Anterior</button>
 					</div>
 					<div class="col s2 push-s8 right-align">
-						<button id="btnNextIwe" data-tab="ext-work-exp" class="waves-effect btn-flat btn-small">Siguiente</button>
-						                                                       
+						<button id="btnNextIwe" data-tab="ext-work-exp" class="waves-effect waves-light btn-flat btn-small">Siguiente</button>
 					</div>
 				</div>
 
