Remove line breaks in scripts

--- a/collector.html
+++ b/collector.html
@@ -474,7 +474,7 @@
 			<!-- internal-work-experience -->
 			<section id="int-work-exp" class="row section">
 				<fieldset class="row">
-					<legend>Experiencia Interna</legend>
+					<legend>Experiencia Interna &lsqb;Nueva&rsqb;</legend>
 
 					<!-- first form -->
 					<form id="formIwe" class="row">
