Modify scope of methods in ModuleHandler class

--- a/collector.html
+++ b/collector.html
@@ -750,6 +750,7 @@
 	<script type="text/javascript" src="js/helper/form-util.js"></script>
 
 	<script type="text/javascript" src="js/handler.js"></script>
+	<script type="text/javascript" src="js/multiple-handler.js"></script>
 	<script type="text/javascript" src="js/general.js"></script>
 	<script type="text/javascript" src="js/int-work-exp.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
