Add multiple-handler script

--- a/collector.html
+++ b/collector.html
@@ -474,29 +474,29 @@
 			<!-- internal-work-experience -->
 			<section id="int-work-exp" class="row section">
 				<fieldset class="row">
-					<legend>Experiencia Interna &lsqb;Nueva&rsqb;</legend>
+					<legend id="formLegendIwe">Experiencia Interna &lsqb;Nueva&rsqb;</legend>
 
 					<!-- first form -->
 					<form id="formIwe" class="row">
-						<input name="iweIndex" type="hidden" value="">
+						<input name="indexIwe" type="hidden" value="">
 						<div class="input-field col s3">
-							<input id="iweAccount" name="iweAccount" type="text" class="validate" data-length="50" maxlength="50">
-							<label for="iweAccount">Cuenta</label>
+							<input id="accountIwe" name="accountIwe" type="text" class="validate" data-length="50" maxlength="50">
+							<label for="accountIwe">Cuenta</label>
 							<span class="helper-text col s10">Ej. Banco Nacional</span>
 						</div>
 						<div class="input-field col s3">
-							<input id="iweRol" name="iweRol" type="text" class="validate" data-length="50" maxlength="50">
-							<label for="iweRol">Puesto</label>
+							<input id="roleIwe" name="roleIwe" type="text" class="validate" data-length="50" maxlength="50">
+							<label for="roleIwe">Puesto</label>
 							<span class="helper-text col s10">Ej. Desarrollador backend</span>
 						</div>
 						<div class="input-field col s3">
-							<input id="iweProject" name="iweProject" type="text" class="validate" data-length="75" maxlength="75">
-							<label for="iweProject">Proyecto</label>
+							<input id="projectIwe" name="projectIwe" type="text" class="validate" data-length="75" maxlength="75">
+							<label for="projectIwe">Proyecto</label>
 							<span class="helper-text col s10">Ej. Migraci&oacute;n de código legacy</span>
 						</div>
 						<div class="input-field col s3">
-							<input id="iwePeriod" name="iwePeriod" type="text" class="validate" data-length="50" maxlength="50">
-							<label for="iwePeriod">Per&iacute;odo</label>
+							<input id="periodIwe" name="periodIwe" type="text" class="validate" data-length="50" maxlength="50">
+							<label for="periodIwe">Per&iacute;odo</label>
 							<span class="helper-text col s10">Ej. Enero 2017 - Junio 2020</span>
 						</div>
 					</form>
