Update HANDLER_NAME props in classes of script int-work-exp

--- a/collector.html
+++ b/collector.html
@@ -534,17 +534,17 @@
 									<tbody>
 										<tr>
 											<td>Diseño e implementación de microservicios con Spring Boot</td>
-											<td><a href="#" onclick="iweTaskHandler.moveUp(event)" title="subir">&bigtriangleup;</a></td>
-											<td><a href="#" onclick="iweTaskHandler.moveDown(event)" title="bajar">&bigtriangledown;</a></td>
-											<td><a href="#" onclick="iweTaskHandler.select(event)" title="editar">&#x1F589;</a></td>
-											<td><a href="#" onclick="iweTaskHandler.remove(event)" title="borrar">&#x2327;</a></td>
+											<td><a href="#" onclick="iweHandler.taskHandler.moveUp(event)" title="subir">&bigtriangleup;</a></td>
+											<td><a href="#" onclick="iweHandler.taskHandler.moveDown(event)" title="bajar">&bigtriangledown;</a></td>
+											<td><a href="#" onclick="iweHandler.taskHandler.select(event)" title="editar">&#x1F589;</a></td>
+											<td><a href="#" onclick="iweHandler.taskHandler.remove(event)" title="borrar">&#x2327;</a></td>
 										</tr>
 										<tr>
 											<td>Análisis de requerimientos y creación de diagramas de secuencia y máquinas de estado</td>
-											<td><a href="#" onclick="iweTaskHandler.moveUp(event)" title="subir">&bigtriangleup;</a></td>
-											<td><a href="#" onclick="iweTaskHandler.moveDown(event)" title="bajar">&bigtriangledown;</a></td>
-											<td><a href="#" onclick="iweTaskHandler.select(event)" title="editar">&#x1F589;</a></td>
-											<td><a href="#" onclick="iweTaskHandler.remove(event)" title="borrar">&#x2327;</a></td>
+											<td><a href="#" onclick="iweHandler.taskHandler.moveUp(event)" title="subir">&bigtriangleup;</a></td>
+											<td><a href="#" onclick="iweHandler.taskHandler.moveDown(event)" title="bajar">&bigtriangledown;</a></td>
+											<td><a href="#" onclick="iweHandler.taskHandler.select(event)" title="editar">&#x1F589;</a></td>
+											<td><a href="#" onclick="iweHandler.taskHandler.remove(event)" title="borrar">&#x2327;</a></td>
 										</tr>
 									</tbody>
 								</table>
@@ -586,17 +586,17 @@
 									<tbody>
 										<tr>
 											<td>Herramientas&colon; Eclipse IDE, WildFly, GitHub, Jira, Akeyless, Checkmarx, Sonarqube</td>
-											<td><a href="#" onclick="iweToolHandler.moveUp(event)" title="subir">&bigtriangleup;</a></td>
-											<td><a href="#" onclick="iweToolHandler.moveDown(event)" title="bajar">&bigtriangledown;</a></td>
-											<td><a href="#" onclick="iweToolHandler.select(event)" title="editar">&#x1F589;</a></td>
-											<td><a href="#" onclick="iweToolHandler.remove(event)" title="borrar">&#x2327;</a></td>
+											<td><a href="#" onclick="iweHandler.toolHandler.moveUp(event)" title="subir">&bigtriangleup;</a></td>
+											<td><a href="#" onclick="iweHandler.toolHandler.moveDown(event)" title="bajar">&bigtriangledown;</a></td>
+											<td><a href="#" onclick="iweHandler.toolHandler.select(event)" title="editar">&#x1F589;</a></td>
+											<td><a href="#" onclick="iweHandler.toolHandler.remove(event)" title="borrar">&#x2327;</a></td>
 										</tr>
 										<tr>
 											<td>Tecnolog&iacute;as&colon; Java, Spring Boot, JUnit, Git, Maven, Docker</td>
-											<td><a href="#" onclick="iweToolHandler.moveUp(event)" title="subir">&bigtriangleup;</a></td>
-											<td><a href="#" onclick="iweToolHandler.moveDown(event)" title="bajar">&bigtriangledown;</a></td>
-											<td><a href="#" onclick="iweToolHandler.select(event)" title="editar">&#x1F589;</a></td>
-											<td><a href="#" onclick="iweToolHandler.remove(event)" title="borrar">&#x2327;</a></td>
+											<td><a href="#" onclick="iweHandler.toolHandler.moveUp(event)" title="subir">&bigtriangleup;</a></td>
+											<td><a href="#" onclick="iweHandler.toolHandler.moveDown(event)" title="bajar">&bigtriangledown;</a></td>
+											<td><a href="#" onclick="iweHandler.toolHandler.select(event)" title="editar">&#x1F589;</a></td>
+											<td><a href="#" onclick="iweHandler.toolHandler.remove(event)" title="borrar">&#x2327;</a></td>
 										</tr>
 									</tbody>
 								</table>
