Refactor multiple-handler script

--- a/collector.html
+++ b/collector.html
@@ -637,12 +637,12 @@
 							<td>Migración de código</td>
 							<td>Enero 2020 - Febrero 2022</td>
 							<td>
-								Implementación de microservicios con Spring Boot <br>
-								Elaboración de diagramas UML
+								* Implementación de microservicios con Spring Boot <br>
+								* Elaboración de diagramas UML
 							</td>
 							<td>
-								Herramientas: Eclipse, Visual Paradigm CE, GitHub <br>
-								Tecnologías: Java v8, Maven, Git, JSON
+								* Herramientas: Eclipse, Visual Paradigm CE, GitHub <br>
+								* Tecnologías: Java v8, Maven, Git, JSON
 							</td>
 							<td><a href="#" onclick="iweHandler.moveUp(event)" title="subir">&bigtriangleup;</a></td>
 							<td><a href="#" onclick="iweHandler.moveDown(event)" title="bajar">&bigtriangledown;</a></td>
@@ -655,12 +655,12 @@
 							<td>Migración de datos</td>
 							<td>Abril 2022 - Septiembre 2022</td>
 							<td>
-								Migración de store procedures de Informix a Oracle <br>
-								Diseño y creación de nuevas tablas
+								* Migración de store procedures de Informix a Oracle <br>
+								* Diseño y creación de nuevas tablas
 							</td>
 							<td>
-								Herramientas: DBeaver CE, SQL Developer, Notepad++ <br>
-								Tecnologías: Oracle DB v12, Git
+								* Herramientas: DBeaver CE, SQL Developer, Notepad++ <br>
+								* Tecnologías: Oracle DB v12, Git
 							</td>
 							<td><a href="#" onclick="iweHandler.moveUp(event)" title="subir">&bigtriangleup;</a></td>
 							<td><a href="#" onclick="iweHandler.moveDown(event)" title="bajar">&bigtriangledown;</a></td>
