Replace html control type of field 'descSkill' in skills section

--- a/collector.html
+++ b/collector.html
@@ -348,8 +348,7 @@
 						<legend>Conocimiento &lsqb;Nuevo&rsqb;</legend>
 						<input name="indexSkill" type="hidden" value="">
 						<div class="input-field col s12">
-							<!-- <input id="descSkill" name="descSkill" type="text" class="validate" data-length="100" maxlength="100"> -->
-							<textarea id="descSkill" name="descSkill" class="materialize-textarea validate" data-length="125" maxlength="125" rows="3"></textarea>
+							<input id="descSkill" name="descSkill" type="text" class="validate" data-length="125" maxlength="125">
 							<label for="descSkill">Descripci&oacute;n</label>
 							<span class="helper-text col s10">Ej. Manejo de m&oacute;dulos SAP&colon; SD, MM, PP, FI</span>
 						</div>
