--- a/collector.html
+++ b/collector.html
@@ -748,6 +748,10 @@
 	<script type="text/javascript" src="js/helper/table-util.js"></script>
 	<script type="text/javascript" src="js/helper/form-util.js"></script>
 
+	<script type="text/javascript" src="js/component/form.js"></script>
+	<script type="text/javascript" src="js/component/table.js"></script>
+	<script type="text/javascript" src="js/handler/handler.js"></script>
+
 	<script type="text/javascript" src="js/handler.js"></script>
 	<script type="text/javascript" src="js/multiple-handler.js"></script>
 	<script type="text/javascript" src="js/general.js"></script>
