Refactor education handler class

--- a/collector.html
+++ b/collector.html
@@ -133,26 +133,28 @@
 							</tr>
 						</thead>
 						<tbody>
+							<!-- 
 							<tr>
-								<td>Licenciatura en Inform&aacute;tica Administrativa</td>
-								<td>Universidad Nacional Aut&oacute;noma de M&eacute;xico</td>
+								<td>Licenciatura en Informática Administrativa</td>
+								<td>Universidad Nacional Autónoma de México</td>
 								<td>2015</td>
 								<td>2020</td>
-								<td><a href="#" onclick="educationHandler.moveUp(event)" title="subir">&bigtriangleup;</a></td>
-								<td><a href="#" onclick="educationHandler.moveDown(event)" title="bajar">&bigtriangledown;</a></td>
-								<td><a href="#" onclick="educationHandler.select(event)" title="editar">&#x1F589;</a></td>
-								<td><a href="#" onclick="educationHandler.remove(event)" title="borrar">&#x2327;</a></td>
+								<td><a href="#" onclick="eduHandler.moveUp(event)" title="subir">&bigtriangleup;</a></td>
+								<td><a href="#" onclick="eduHandler.moveDown(event)" title="bajar">&bigtriangledown;</a></td>
+								<td><a href="#" onclick="eduHandler.select(event)" title="editar">&#x1F589;</a></td>
+								<td><a href="#" onclick="eduHandler.remove(event)" title="borrar">&#x2327;</a></td>
 							</tr>
 							<tr>
-								<td>Maestr&iacute;a en Administraci&oacute;n</td>
-								<td>Universidad del Valle de M&eacute;xico</td>
+								<td>Maestría en Administración</td>
+								<td>Universidad del Valle de México</td>
 								<td>2020</td>
 								<td>2023</td>
-								<td><a href="#" onclick="educationHandler.moveUp(event)" title="subir">&bigtriangleup;</a></td>
-								<td><a href="#" onclick="educationHandler.moveDown(event)" title="bajar">&bigtriangledown;</a></td>
-								<td><a href="#" onclick="educationHandler.select(event)" title="editar">&#x1F589;</a></td>
-								<td><a href="#" onclick="educationHandler.remove(event)" title="borrar">&#x2327;</a></td>
+								<td><a href="#" onclick="eduHandler.moveUp(event)" title="subir">&bigtriangleup;</a></td>
+								<td><a href="#" onclick="eduHandler.moveDown(event)" title="bajar">&bigtriangledown;</a></td>
+								<td><a href="#" onclick="eduHandler.select(event)" title="editar">&#x1F589;</a></td>
+								<td><a href="#" onclick="eduHandler.remove(event)" title="borrar">&#x2327;</a></td>
 							</tr>
+							-->
 						</tbody>
 					</table>
 					<br><br>
@@ -748,9 +750,11 @@
 	<script type="text/javascript" src="js/helper/table-util.js"></script>
 	<script type="text/javascript" src="js/helper/form-util.js"></script>
 
-	<script type="text/javascript" src="js/component/form.js"></script>
-	<script type="text/javascript" src="js/component/table.js"></script>
-	<script type="text/javascript" src="js/handler/handler.js"></script>
+	<script type="text/javascript" src="js/base/model.js"></script>
+	<script type="text/javascript" src="js/base/form.js"></script>
+	<script type="text/javascript" src="js/base/table.js"></script>
+	<script type="text/javascript" src="js/handlers/handler.js"></script>
+	<script type="text/javascript" src="js/handlers/simple.js"></script>
 
 	<script type="text/javascript" src="js/handler.js"></script>
 	<script type="text/javascript" src="js/multiple-handler.js"></script>
