Refactor composite handler class

--- a/collector.html
+++ b/collector.html
@@ -533,6 +533,7 @@
 										</tr>
 									</thead>
 									<tbody>
+										<!-- 
 										<tr>
 											<td>Diseño e implementación de microservicios con Spring Boot</td>
 											<td><a href="#" onclick="iweHandler.taskHandler.moveUp(event)" title="subir">&bigtriangleup;</a></td>
@@ -547,6 +548,7 @@
 											<td><a href="#" onclick="iweHandler.taskHandler.select(event)" title="editar">&#x1F589;</a></td>
 											<td><a href="#" onclick="iweHandler.taskHandler.remove(event)" title="borrar">&#x2327;</a></td>
 										</tr>
+										-->
 									</tbody>
 								</table>
 
@@ -585,20 +587,22 @@
 										</tr>
 									</thead>
 									<tbody>
+										<!-- 
 										<tr>
-											<td>Herramientas&colon; Eclipse IDE, WildFly, GitHub, Jira, Akeyless, Checkmarx, Sonarqube</td>
+											<td>Herramientas: Eclipse IDE, WildFly, GitHub, Jira, Akeyless, Checkmarx, Sonarqube</td>
 											<td><a href="#" onclick="iweHandler.toolHandler.moveUp(event)" title="subir">&bigtriangleup;</a></td>
 											<td><a href="#" onclick="iweHandler.toolHandler.moveDown(event)" title="bajar">&bigtriangledown;</a></td>
 											<td><a href="#" onclick="iweHandler.toolHandler.select(event)" title="editar">&#x1F589;</a></td>
 											<td><a href="#" onclick="iweHandler.toolHandler.remove(event)" title="borrar">&#x2327;</a></td>
 										</tr>
 										<tr>
-											<td>Tecnolog&iacute;as&colon; Java, Spring Boot, JUnit, Git, Maven, Docker</td>
+											<td>Tecnologías: Java, Spring Boot, JUnit, Git, Maven, Docker</td>
 											<td><a href="#" onclick="iweHandler.toolHandler.moveUp(event)" title="subir">&bigtriangleup;</a></td>
 											<td><a href="#" onclick="iweHandler.toolHandler.moveDown(event)" title="bajar">&bigtriangledown;</a></td>
 											<td><a href="#" onclick="iweHandler.toolHandler.select(event)" title="editar">&#x1F589;</a></td>
 											<td><a href="#" onclick="iweHandler.toolHandler.remove(event)" title="borrar">&#x2327;</a></td>
 										</tr>
+										-->
 									</tbody>
 								</table>
 
@@ -632,6 +636,7 @@
 						</tr>
 					</thead>
 					<tbody>
+						<!-- 
 						<tr>
 							<td>Banorte</td>
 							<td>Desarrollador Java</td>
@@ -668,6 +673,7 @@
 							<td><a href="#" onclick="iweHandler.select(event)" title="editar">&#x1F589;</a></td>
 							<td><a href="#" onclick="iweHandler.remove(event)" title="borrar">&#x2327;</a></td>
 						</tr>
+						-->
 					</tbody>
 				</table>
 				<br><br>
@@ -746,20 +752,22 @@
 	<script type="text/javascript" src="js/lib/jquery-3.7.1.min.js"></script>
 	<script type="text/javascript" src="js/lib/materialize.min.js"></script>
 
-	<script type="text/javascript" src="js/helper/model.js"></script>
+	<!-- <script type="text/javascript" src="js/helper/model.js"></script>
 	<script type="text/javascript" src="js/helper/table-util.js"></script>
-	<script type="text/javascript" src="js/helper/form-util.js"></script>
+	<script type="text/javascript" src="js/helper/form-util.js"></script> -->
 
 	<script type="text/javascript" src="js/base/model.js"></script>
+	<script type="text/javascript" src="js/base/validator.js"></script>
 	<script type="text/javascript" src="js/base/form.js"></script>
 	<script type="text/javascript" src="js/base/table.js"></script>
 	<script type="text/javascript" src="js/handlers/handler.js"></script>
 	<script type="text/javascript" src="js/handlers/simple.js"></script>
+	<script type="text/javascript" src="js/handlers/composite.js"></script>
 
-	<script type="text/javascript" src="js/handler.js"></script>
+	<!-- <script type="text/javascript" src="js/handler.js"></script>
 	<script type="text/javascript" src="js/multiple-handler.js"></script>
 	<script type="text/javascript" src="js/general.js"></script>
-	<script type="text/javascript" src="js/int-work-exp.js"></script>
+	<script type="text/javascript" src="js/int-work-exp.js"></script> -->
 	<script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
