--- a/collector.html
+++ b/collector.html
@@ -536,17 +536,17 @@
 										<!-- 
 										<tr>
 											<td>Diseño e implementación de microservicios con Spring Boot</td>
-											<td><a href="#" onclick="iweHandler.taskHandler.moveUp(event)" title="subir">&bigtriangleup;</a></td>
-											<td><a href="#" onclick="iweHandler.taskHandler.moveDown(event)" title="bajar">&bigtriangledown;</a></td>
-											<td><a href="#" onclick="iweHandler.taskHandler.select(event)" title="editar">&#x1F589;</a></td>
-											<td><a href="#" onclick="iweHandler.taskHandler.remove(event)" title="borrar">&#x2327;</a></td>
+											<td><a href="#" onclick="iweHandler.form.taskHandler.moveUp(event)" title="subir">&bigtriangleup;</a></td>
+											<td><a href="#" onclick="iweHandler.form.taskHandler.moveDown(event)" title="bajar">&bigtriangledown;</a></td>
+											<td><a href="#" onclick="iweHandler.form.taskHandler.select(event)" title="editar">&#x1F589;</a></td>
+											<td><a href="#" onclick="iweHandler.form.taskHandler.remove(event)" title="borrar">&#x2327;</a></td>
 										</tr>
 										<tr>
 											<td>Análisis de requerimientos y creación de diagramas de secuencia y máquinas de estado</td>
-											<td><a href="#" onclick="iweHandler.taskHandler.moveUp(event)" title="subir">&bigtriangleup;</a></td>
-											<td><a href="#" onclick="iweHandler.taskHandler.moveDown(event)" title="bajar">&bigtriangledown;</a></td>
-											<td><a href="#" onclick="iweHandler.taskHandler.select(event)" title="editar">&#x1F589;</a></td>
-											<td><a href="#" onclick="iweHandler.taskHandler.remove(event)" title="borrar">&#x2327;</a></td>
+											<td><a href="#" onclick="iweHandler.form.taskHandler.moveUp(event)" title="subir">&bigtriangleup;</a></td>
+											<td><a href="#" onclick="iweHandler.form.taskHandler.moveDown(event)" title="bajar">&bigtriangledown;</a></td>
+											<td><a href="#" onclick="iweHandler.form.taskHandler.select(event)" title="editar">&#x1F589;</a></td>
+											<td><a href="#" onclick="iweHandler.form.taskHandler.remove(event)" title="borrar">&#x2327;</a></td>
 										</tr>
 										-->
 									</tbody>
@@ -590,17 +590,17 @@
 										<!-- 
 										<tr>
 											<td>Herramientas: Eclipse IDE, WildFly, GitHub, Jira, Akeyless, Checkmarx, Sonarqube</td>
-											<td><a href="#" onclick="iweHandler.toolHandler.moveUp(event)" title="subir">&bigtriangleup;</a></td>
-											<td><a href="#" onclick="iweHandler.toolHandler.moveDown(event)" title="bajar">&bigtriangledown;</a></td>
-											<td><a href="#" onclick="iweHandler.toolHandler.select(event)" title="editar">&#x1F589;</a></td>
-											<td><a href="#" onclick="iweHandler.toolHandler.remove(event)" title="borrar">&#x2327;</a></td>
+											<td><a href="#" onclick="iweHandler.form.toolHandler.moveUp(event)" title="subir">&bigtriangleup;</a></td>
+											<td><a href="#" onclick="iweHandler.form.toolHandler.moveDown(event)" title="bajar">&bigtriangledown;</a></td>
+											<td><a href="#" onclick="iweHandler.form.toolHandler.select(event)" title="editar">&#x1F589;</a></td>
+											<td><a href="#" onclick="iweHandler.form.toolHandler.remove(event)" title="borrar">&#x2327;</a></td>
 										</tr>
 										<tr>
 											<td>Tecnologías: Java, Spring Boot, JUnit, Git, Maven, Docker</td>
-											<td><a href="#" onclick="iweHandler.toolHandler.moveUp(event)" title="subir">&bigtriangleup;</a></td>
-											<td><a href="#" onclick="iweHandler.toolHandler.moveDown(event)" title="bajar">&bigtriangledown;</a></td>
-											<td><a href="#" onclick="iweHandler.toolHandler.select(event)" title="editar">&#x1F589;</a></td>
-											<td><a href="#" onclick="iweHandler.toolHandler.remove(event)" title="borrar">&#x2327;</a></td>
+											<td><a href="#" onclick="iweHandler.form.toolHandler.moveUp(event)" title="subir">&bigtriangleup;</a></td>
+											<td><a href="#" onclick="iweHandler.form.toolHandler.moveDown(event)" title="bajar">&bigtriangledown;</a></td>
+											<td><a href="#" onclick="iweHandler.form.toolHandler.select(event)" title="editar">&#x1F589;</a></td>
+											<td><a href="#" onclick="iweHandler.form.toolHandler.remove(event)" title="borrar">&#x2327;</a></td>
 										</tr>
 										-->
 									</tbody>
