Refactor CourseHandler class

--- a/collector.html
+++ b/collector.html
@@ -218,6 +218,7 @@
 							</tr>
 						</thead>
 						<tbody>
+							<!-- 
 							<tr>
 								<td>JIRA fundamentals</td>
 								<td>TCS internal courses</td>
@@ -235,7 +236,8 @@
 								<td><a href="#" onclick="courseHandler.moveDown(event)" title="bajar">&bigtriangledown;</a></td>
 								<td><a href="#" onclick="courseHandler.select(event)" title="editar">&#x1F589;</a></td>
 								<td><a href="#" onclick="courseHandler.remove(event)" title="borrar">&#x2327;</a></td>
-							</tr>
+							</tr> 
+							-->
 						</tbody>
 					</table>
 					<br><br>
@@ -752,9 +754,8 @@
 	<script type="text/javascript" src="js/lib/jquery-3.7.1.min.js"></script>
 	<script type="text/javascript" src="js/lib/materialize.min.js"></script>
 
-	<!-- <script type="text/javascript" src="js/helper/model.js"></script>
-	<script type="text/javascript" src="js/helper/table-util.js"></script>
-	<script type="text/javascript" src="js/helper/form-util.js"></script> -->
+	<!-- <script type="text/javascript" src="js/helper/table-util.js"></script> -->
+	<script type="text/javascript" src="js/helper/form-util.js"></script>
 
 	<script type="text/javascript" src="js/base/model.js"></script>
 	<script type="text/javascript" src="js/base/validator.js"></script>
